<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:background="@drawable/anaekran">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eMail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editUsername"
            android:hint="@string/sifreGir"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/UyeGiris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPassword"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonshape"
            android:text="@string/btnGirisYap"
            android:textColor="@color/btnRenk" />

        <Button
            android:id="@+id/SifremiUnuttum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/UyeGiris"
            android:layout_centerInParent="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/buttonshape"
            android:text="@string/sifremiUnuttum"
            android:textColor="@color/btnRenk" />
    </RelativeLayout>
</RelativeLayout>