<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anaekran"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4">


        <Button
            android:id="@+id/loginSayfasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonshape"
            android:shadowRadius="5"
            android:text="@string/btnGiris"
            android:textColor="@color/btnRenk"
            android:textSize="17sp" />

        <Button
            android:id="@+id/kayitSayfasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:text="@string/btnUyeOl"
            android:textColor="@color/btnRenk"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnUyeOlma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:shadowRadius="5"
            android:text="@string/btnUyeOlma"
            android:textColor="@color/btnRenk"
            android:textSize="17sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>